syntax = "proto3";

option go_package = "internal/grpc/schema/pb";

package position;

service Position {
  rpc Streaming(PositionReq) returns (stream Point) {}
}

message Point {
  string device_id = 1;
  double latitude = 2;
  double longitude = 3;
  double speed = 4;
  int32 pdop = 5;
  int32 hdop = 6;
  int32 vdop = 7;
  int32 nsat = 8;
  int32 ns = 9;
  int32 course = 10;
  repeated LiquidSensor liquid_sensors = 11;
  repeated AnSensor an_sensors = 12;
  string navigation_time = 13;
  string receiving_time = 14;
}

message LiquidSensor {
  string sensor_number = 1;
  string error_flag = 2;
  double value_mm = 3;
  double value_liters = 4;
}

message AnSensor {
  string sensor_number = 1;
  int64 value = 2;
}

message PositionReq {
  repeated string unit_ids = 1;
}